# C-project

./: CMakeLists.txt  project1_rental.c  project2_inOrder.c  project2_number.c  project3_escalator.c  project3_rental.c  project4_escalator.c  project4_exclusive_or.c  project5_compression.c  project5_inOrder.c  project6_decode.c  project7_shelter.c  project8_guests.c  project9_guests.c  test.c
