cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c)
add_executable(Project project1_rental.c)
add_executable(Test test.c)
add_executable(Number project2_number.c)
add_executable(inOrder project2_inOrder.c)
add_executable(rental project3_rental.c)
add_executable(escalator project3_escalator.c)
add_executable(exclusive project4_exclusive_or.c)
add_executable(escalator1 project4_escalator.c)
add_executable(encode project5_compression.c)
add_executable(inOrder1 project5_inOrder.c)
add_executable(decode project6_decode.c)
add_executable(animal project7_shelter.c)
add_executable(guest project8_guests.c)
